feat: blog i18n content

--- a/apps/web/content/blog/advanced-svg-techniques/de.mdx
+++ b/apps/web/content/blog/advanced-svg-techniques/de.mdx
@@ -1,17 +1,17 @@
 ---
-title: 德语 Advanced SVG Techniques for Web Developers
-desc: Explore advanced SVG techniques including animations, filters, and performance optimization
+title: Fortgeschrittene SVG-Techniken für Webentwickler
+desc: Erkunden Sie fortgeschrittene SVG-Techniken einschließlich Animationen, Filter und Leistungsoptimierung
 cover: https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=800&h=400&fit=crop
 datetime: 2025-01-05
 ---
 
-# Advanced SVG Techniques for Web Developers
+# Fortgeschrittene SVG-Techniken für Webentwickler
 
-Once you've mastered the basics of SVG, it's time to explore advanced techniques that can take your graphics to the next level.
+Sobald Sie die Grundlagen von SVG beherrschen, ist es an der Zeit, fortgeschrittene Techniken zu erkunden, die Ihre Grafiken auf die nächste Stufe heben können.
 
-## SVG Sprites for Better Performance
+## SVG-Sprites für bessere Leistung
 
-Instead of loading multiple SVG files, combine them into a sprite:
+Anstatt mehrere SVG-Dateien zu laden, kombinieren Sie sie zu einem Sprite:
 
 ```xml
 <svg style="display: none;">
@@ -23,15 +23,15 @@ Instead of loading multiple SVG files, combine them into a sprite:
   </symbol>
 </svg>
 
-<!-- Use the icons -->
+<!-- Verwenden Sie die Icons -->
 <svg class="icon">
   <use href="#icon-home"/>
 </svg>
 ```
 
-## CSS Animations with SVG
+## CSS-Animationen mit SVG
 
-Animate SVG properties using CSS:
+Animieren Sie SVG-Eigenschaften mit CSS:
 
 ```css
 .animated-path {
@@ -47,9 +47,9 @@ Animate SVG properties using CSS:
 }
 ```
 
-## SVG Filters for Visual Effects
+## SVG-Filter für visuelle Effekte
 
-Create stunning effects with SVG filters:
+Erstellen Sie beeindruckende Effekte mit SVG-Filtern:
 
 ```xml
 <svg>
@@ -66,70 +66,70 @@ Create stunning effects with SVG filters:
 </svg>
 ```
 
-## Responsive SVG with viewBox
+## Responsives SVG mit viewBox
 
-Make SVG responsive while maintaining aspect ratio:
+Machen Sie SVG responsiv und behalten Sie dabei das Seitenverhältnis bei:
 
 ```xml
 <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-  <!-- content -->
+  <!-- Inhalt -->
 </svg>
 ```
 
-## Inline SVG vs External Files
+## Inline-SVG vs. externe Dateien
 
-### Inline SVG Benefits
+### Vorteile von Inline-SVG
 
-- No HTTP request
-- Can be styled with CSS
-- Can be animated with JavaScript
-- Better for critical graphics
+- Keine HTTP-Anfrage
+- Kann mit CSS gestylt werden
+- Kann mit JavaScript animiert werden
+- Besser für kritische Grafiken
 
-### External SVG Benefits
+### Vorteile von externem SVG
 
-- Browser caching
-- Reusable across pages
-- Cleaner HTML
-- Better for non-critical graphics
+- Browser-Caching
+- Wiederverwendbar über Seiten hinweg
+- Saubereres HTML
+- Besser für nicht-kritische Grafiken
 
-## Performance Best Practices
+## Best Practices für die Leistung
 
-1. **Minimize path complexity** - fewer points = faster rendering
-2. **Use `<use>` for repeated elements** - reduces DOM size
-3. **Optimize with SVGO** - remove unnecessary data
-4. **Consider lazy loading** - for below-the-fold SVGs
-5. **Use CSS transforms** - hardware accelerated
+1. **Pfadkomplexität minimieren** - weniger Punkte = schnelleres Rendering
+2. **`<use>` für wiederholte Elemente verwenden** - reduziert DOM-Größe
+3. **Mit SVGO optimieren** - unnötige Daten entfernen
+4. **Lazy Loading in Betracht ziehen** - für SVGs unterhalb des Falzes
+5. **CSS-Transformationen verwenden** - hardwarebeschleunigt
 
-## Accessibility Considerations
+## Barrierefreiheit
 
-Make your SVG accessible:
+Machen Sie Ihr SVG barrierefrei:
 
 ```xml
 <svg role="img" aria-labelledby="title desc">
-  <title id="title">Company Logo</title>
-  <desc id="desc">A blue circle with white text</desc>
-  <!-- content -->
+  <title id="title">Firmenlogo</title>
+  <desc id="desc">Ein blauer Kreis mit weißem Text</desc>
+  <!-- Inhalt -->
 </svg>
 ```
 
-## JavaScript Integration
+## JavaScript-Integration
 
-Manipulate SVG with JavaScript:
+Manipulieren Sie SVG mit JavaScript:
 
 ```javascript
 const circle = document.querySelector('circle');
 circle.setAttribute('r', 50);
 circle.style.fill = 'red';
 
-// Animate with GSAP or other libraries
+// Animieren Sie mit GSAP oder anderen Bibliotheken
 gsap.to(circle, {
   attr: { r: 100 },
   duration: 1
 });
 ```
 
-## Conclusion
+## Fazit
 
-SVG is a powerful format with endless possibilities. By mastering these advanced techniques, you can create performant, accessible, and visually stunning graphics for the web.
+SVG ist ein leistungsstarkes Format mit endlosen Möglichkeiten. Durch die Beherrschung dieser fortgeschrittenen Techniken können Sie performante, barrierefreie und visuell beeindruckende Grafiken für das Web erstellen.
 
-Keep experimenting and don't forget to optimize your SVG files with Tiny SVG!
+Experimentieren Sie weiter und vergessen Sie nicht, Ihre SVG-Dateien mit Tiny SVG zu optimieren!
