--- a/apps/web/content/blog/advanced-svg-techniques/zh.mdx
+++ b/apps/web/content/blog/advanced-svg-techniques/zh.mdx
@@ -1,17 +1,17 @@
 ---
-title: 中文 Advanced SVG Techniques for Web Developers
-desc: Explore advanced SVG techniques including animations, filters, and performance optimization
+title: Web 开发者的高级 SVG 技术
+desc: 探索高级 SVG 技术，包括动画、滤镜和性能优化
 cover: https://images.unsplash.com/photo-1587620962725-abab7fe55159?w=800&h=400&fit=crop
 datetime: 2025-01-05
 ---
 
-# Advanced SVG Techniques for Web Developers
+# Web 开发者的高级 SVG 技术
 
-Once you've mastered the basics of SVG, it's time to explore advanced techniques that can take your graphics to the next level.
+掌握了 SVG 基础知识后，是时候探索可以将图形提升到新高度的高级技术了。
 
-## SVG Sprites for Better Performance
+## 使用 SVG Sprites 提升性能
 
-Instead of loading multiple SVG files, combine them into a sprite:
+与其加载多个 SVG 文件，不如将它们合并到一个雪碧图中：
 
 ```xml
 <svg style="display: none;">
@@ -23,15 +23,15 @@ Instead of loading multiple SVG files, combine them into a sprite:
   </symbol>
 </svg>
 
-<!-- Use the icons -->
+<!-- 使用图标 -->
 <svg class="icon">
   <use href="#icon-home"/>
 </svg>
 ```
 
-## CSS Animations with SVG
+## 使用 CSS 为 SVG 添加动画
 
-Animate SVG properties using CSS:
+使用 CSS 对 SVG 属性进行动画处理：
 
 ```css
 .animated-path {
@@ -47,9 +47,9 @@ Animate SVG properties using CSS:
 }
 ```
 
-## SVG Filters for Visual Effects
+## 使用 SVG 滤镜创建视觉效果
 
-Create stunning effects with SVG filters:
+使用 SVG 滤镜创建令人惊艳的效果：
 
 ```xml
 <svg>
@@ -66,70 +66,70 @@ Create stunning effects with SVG filters:
 </svg>
 ```
 
-## Responsive SVG with viewBox
+## 使用 viewBox 实现响应式 SVG
 
-Make SVG responsive while maintaining aspect ratio:
+在保持纵横比的同时使 SVG 具有响应性：
 
 ```xml
 <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet">
-  <!-- content -->
+  <!-- 内容 -->
 </svg>
 ```
 
-## Inline SVG vs External Files
+## 内联 SVG 与外部文件
 
-### Inline SVG Benefits
+### 内联 SVG 的优势
 
-- No HTTP request
-- Can be styled with CSS
-- Can be animated with JavaScript
-- Better for critical graphics
+- 无需 HTTP 请求
+- 可以使用 CSS 样式化
+- 可以使用 JavaScript 动画
+- 更适合关键图形
 
-### External SVG Benefits
+### 外部 SVG 的优势
 
-- Browser caching
-- Reusable across pages
-- Cleaner HTML
-- Better for non-critical graphics
+- 浏览器缓存
+- 可跨页面重用
+- HTML 更简洁
+- 更适合非关键图形
 
-## Performance Best Practices
+## 性能最佳实践
 
-1. **Minimize path complexity** - fewer points = faster rendering
-2. **Use `<use>` for repeated elements** - reduces DOM size
-3. **Optimize with SVGO** - remove unnecessary data
-4. **Consider lazy loading** - for below-the-fold SVGs
-5. **Use CSS transforms** - hardware accelerated
+1. **最小化路径复杂度** - 更少的点 = 更快的渲染
+2. **对重复元素使用 `<use>`** - 减少 DOM 大小
+3. **使用 SVGO 优化** - 删除不必要的数据
+4. **考虑懒加载** - 用于首屏之下的 SVG
+5. **使用 CSS 变换** - 硬件加速
 
-## Accessibility Considerations
+## 可访问性注意事项
 
-Make your SVG accessible:
+使您的 SVG 具有可访问性：
 
 ```xml
 <svg role="img" aria-labelledby="title desc">
-  <title id="title">Company Logo</title>
-  <desc id="desc">A blue circle with white text</desc>
-  <!-- content -->
+  <title id="title">公司徽标</title>
+  <desc id="desc">带有白色文本的蓝色圆圈</desc>
+  <!-- 内容 -->
 </svg>
 ```
 
-## JavaScript Integration
+## JavaScript 集成
 
-Manipulate SVG with JavaScript:
+使用 JavaScript 操作 SVG：
 
 ```javascript
 const circle = document.querySelector('circle');
 circle.setAttribute('r', 50);
 circle.style.fill = 'red';
 
-// Animate with GSAP or other libraries
+// 使用 GSAP 或其他库进行动画
 gsap.to(circle, {
   attr: { r: 100 },
   duration: 1
 });
 ```
 
-## Conclusion
+## 结论
 
-SVG is a powerful format with endless possibilities. By mastering these advanced techniques, you can create performant, accessible, and visually stunning graphics for the web.
+SVG 是一种功能强大的格式，拥有无限可能。通过掌握这些高级技术，您可以为 Web 创建高性能、可访问且视觉效果惊艳的图形。
 
-Keep experimenting and don't forget to optimize your SVG files with Tiny SVG!
+继续实验，别忘了使用 Tiny SVG 优化您的 SVG 文件！
