--- a/apps/web/content/blog/svg-vs-png-when-to-use-each/ko.mdx
+++ b/apps/web/content/blog/svg-vs-png-when-to-use-each/ko.mdx
@@ -1,87 +1,87 @@
 ---
-title: SVG vs PNG - When to Use Each Format
-desc: Understanding the differences between SVG and PNG formats and choosing the right one for your project
+title: SVG vs PNG - 각 형식을 언제 사용할지
+desc: SVG와 PNG 형식의 차이점을 이해하고 프로젝트에 적합한 형식 선택하기
 cover: https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=400&fit=crop
 datetime: 2025-01-10
 ---
 
-# SVG vs PNG: When to Use Each Format
+# SVG vs PNG: 각 형식을 언제 사용할지
 
-Choosing between SVG and PNG can significantly impact your website's performance and visual quality. Let's explore when to use each format.
+SVG와 PNG 중 선택하는 것은 웹사이트의 성능과 시각적 품질에 큰 영향을 미칠 수 있습니다. 각 형식을 언제 사용해야 하는지 살펴보겠습니다.
 
-## What is SVG?
+## SVG란 무엇인가?
 
-SVG (Scalable Vector Graphics) is a vector image format based on XML. It uses mathematical formulas to define shapes, paths, and colors.
+SVG(Scalable Vector Graphics)는 XML 기반의 벡터 이미지 형식입니다. 수학 공식을 사용하여 도형, 경로 및 색상을 정의합니다.
 
-### Advantages of SVG
+### SVG의 장점
 
-- **Infinitely scalable** - looks perfect at any size
-- **Small file size** - especially for simple graphics
-- **Editable** - can be modified with code
-- **SEO-friendly** - searchable and indexable
-- **Accessible** - can include text alternatives
+- **무한 확장 가능** - 모든 크기에서 완벽하게 보임
+- **작은 파일 크기** - 특히 간단한 그래픽의 경우
+- **편집 가능** - 코드로 수정 가능
+- **SEO 친화적** - 검색 및 색인 가능
+- **접근성** - 텍스트 대안 포함 가능
 
-### Best Use Cases for SVG
+### SVG의 최적 사용 사례
 
-- Logos and icons
-- Illustrations and diagrams
-- UI elements
-- Charts and graphs
-- Simple animations
+- 로고 및 아이콘
+- 일러스트레이션 및 다이어그램
+- UI 요소
+- 차트 및 그래프
+- 간단한 애니메이션
 
-## What is PNG?
+## PNG란 무엇인가?
 
-PNG (Portable Network Graphics) is a raster image format that stores images as a grid of pixels.
+PNG(Portable Network Graphics)는 이미지를 픽셀 그리드로 저장하는 래스터 이미지 형식입니다.
 
-### Advantages of PNG
+### PNG의 장점
 
-- **Supports transparency** - alpha channel
-- **Wide compatibility** - works everywhere
-- **Better for complex images** - photographs, gradients
-- **Lossless compression** - no quality loss
+- **투명도 지원** - 알파 채널
+- **광범위한 호환성** - 어디서나 작동
+- **복잡한 이미지에 더 좋음** - 사진, 그라디언트
+- **무손실 압축** - 품질 손실 없음
 
-### Best Use Cases for PNG
+### PNG의 최적 사용 사례
 
-- Photographs
-- Complex graphics with many colors
-- Screenshots
-- Images with text that needs to be crisp
-- When you need transparency with photos
+- 사진
+- 많은 색상이 포함된 복잡한 그래픽
+- 스크린샷
+- 선명한 텍스트가 필요한 이미지
+- 사진에 투명도가 필요할 때
 
-## Performance Comparison
+## 성능 비교
 
-| Feature | SVG | PNG |
+| 기능 | SVG | PNG |
 |---------|-----|-----|
-| File Size (simple logo) | 2-5 KB | 10-50 KB |
-| Scalability | Perfect at any size | Pixelated when scaled |
-| Colors | Limited for simple graphics | Millions of colors |
-| Animation | CSS/JS animations | Requires GIF or video |
-| Editing | Easy with code | Requires image editor |
+| 파일 크기 (간단한 로고) | 2-5 KB | 10-50 KB |
+| 확장성 | 모든 크기에서 완벽 | 확대 시 픽셀화됨 |
+| 색상 | 간단한 그래픽에는 제한적 | 수백만 가지 색상 |
+| 애니메이션 | CSS/JS 애니메이션 | GIF 또는 비디오 필요 |
+| 편집 | 코드로 쉽게 편집 | 이미지 편집기 필요 |
 
-## Making the Right Choice
+## 올바른 선택하기
 
-Choose **SVG** when:
-- The graphic is relatively simple
-- You need it to scale perfectly
-- You want to animate or interact with it
-- File size matters
+다음의 경우 **SVG**를 선택하세요:
+- 그래픽이 비교적 간단한 경우
+- 완벽한 확장이 필요한 경우
+- 애니메이션이나 상호 작용이 필요한 경우
+- 파일 크기가 중요한 경우
 
-Choose **PNG** when:
-- The image is a photograph
-- The graphic has complex gradients or effects
-- You need pixel-perfect rendering
-- SVG support is a concern
+다음의 경우 **PNG**를 선택하세요:
+- 이미지가 사진인 경우
+- 그래픽에 복잡한 그라디언트나 효과가 있는 경우
+- 픽셀 완벽한 렌더링이 필요한 경우
+- SVG 지원이 문제가 되는 경우
 
-## Hybrid Approach
+## 하이브리드 접근 방식
 
-Modern websites often use both:
+현대 웹사이트는 종종 둘 다 사용합니다:
 
-- SVG for UI elements, logos, and icons
-- PNG for photos and complex graphics
-- WebP as a fallback for better compression
+- UI 요소, 로고 및 아이콘에는 SVG
+- 사진 및 복잡한 그래픽에는 PNG
+- 더 나은 압축을 위한 대체로 WebP
 
-## Conclusion
+## 결론
 
-Both formats have their place in web development. Understanding their strengths helps you make informed decisions that improve both performance and visual quality.
+두 형식 모두 웹 개발에서 제자리를 가지고 있습니다. 그들의 강점을 이해하면 성능과 시각적 품질을 모두 향상시키는 정보에 입각한 결정을 내리는 데 도움이 됩니다.
 
-Use Tiny SVG to optimize your SVG files and keep your website fast!
+Tiny SVG를 사용하여 SVG 파일을 최적화하고 웹사이트를 빠르게 유지하세요!
