--- a/apps/web/content/blog/svg-vs-png-when-to-use-each/zh.mdx
+++ b/apps/web/content/blog/svg-vs-png-when-to-use-each/zh.mdx
@@ -1,87 +1,87 @@
 ---
-title: SVG vs PNG - When to Use Each Format
-desc: Understanding the differences between SVG and PNG formats and choosing the right one for your project
+title: SVG vs PNG - 何时使用哪种格式
+desc: 了解 SVG 和 PNG 格式之间的区别，并为您的项目选择合适的格式
 cover: https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=400&fit=crop
 datetime: 2025-01-10
 ---
 
-# SVG vs PNG: When to Use Each Format
+# SVG vs PNG：何时使用哪种格式
 
-Choosing between SVG and PNG can significantly impact your website's performance and visual quality. Let's explore when to use each format.
+在 SVG 和 PNG 之间进行选择会显著影响网站的性能和视觉质量。让我们探讨何时使用每种格式。
 
-## What is SVG?
+## 什么是 SVG？
 
-SVG (Scalable Vector Graphics) is a vector image format based on XML. It uses mathematical formulas to define shapes, paths, and colors.
+SVG（可缩放矢量图形）是一种基于 XML 的矢量图像格式。它使用数学公式来定义形状、路径和颜色。
 
-### Advantages of SVG
+### SVG 的优势
 
-- **Infinitely scalable** - looks perfect at any size
-- **Small file size** - especially for simple graphics
-- **Editable** - can be modified with code
-- **SEO-friendly** - searchable and indexable
-- **Accessible** - can include text alternatives
+- **无限可缩放** - 在任何尺寸下都完美显示
+- **文件体积小** - 特别是对于简单图形
+- **可编辑** - 可以用代码修改
+- **SEO 友好** - 可搜索和可索引
+- **可访问** - 可以包含文本替代
 
-### Best Use Cases for SVG
+### SVG 的最佳使用场景
 
-- Logos and icons
-- Illustrations and diagrams
-- UI elements
-- Charts and graphs
-- Simple animations
+- 徽标和图标
+- 插图和图表
+- UI 元素
+- 图表和图形
+- 简单动画
 
-## What is PNG?
+## 什么是 PNG？
 
-PNG (Portable Network Graphics) is a raster image format that stores images as a grid of pixels.
+PNG（便携式网络图形）是一种将图像存储为像素网格的光栅图像格式。
 
-### Advantages of PNG
+### PNG 的优势
 
-- **Supports transparency** - alpha channel
-- **Wide compatibility** - works everywhere
-- **Better for complex images** - photographs, gradients
-- **Lossless compression** - no quality loss
+- **支持透明度** - Alpha 通道
+- **广泛兼容** - 随处可用
+- **更适合复杂图像** - 照片、渐变
+- **无损压缩** - 无质量损失
 
-### Best Use Cases for PNG
+### PNG 的最佳使用场景
 
-- Photographs
-- Complex graphics with many colors
-- Screenshots
-- Images with text that needs to be crisp
-- When you need transparency with photos
+- 照片
+- 具有多种颜色的复杂图形
+- 屏幕截图
+- 需要清晰文本的图像
+- 需要照片透明度时
 
-## Performance Comparison
+## 性能比较
 
-| Feature | SVG | PNG |
+| 特性 | SVG | PNG |
 |---------|-----|-----|
-| File Size (simple logo) | 2-5 KB | 10-50 KB |
-| Scalability | Perfect at any size | Pixelated when scaled |
-| Colors | Limited for simple graphics | Millions of colors |
-| Animation | CSS/JS animations | Requires GIF or video |
-| Editing | Easy with code | Requires image editor |
+| 文件大小（简单徽标） | 2-5 KB | 10-50 KB |
+| 可缩放性 | 任何尺寸都完美 | 缩放时像素化 |
+| 颜色 | 简单图形颜色有限 | 数百万种颜色 |
+| 动画 | CSS/JS 动画 | 需要 GIF 或视频 |
+| 编辑 | 使用代码轻松编辑 | 需要图像编辑器 |
 
-## Making the Right Choice
+## 做出正确的选择
 
-Choose **SVG** when:
-- The graphic is relatively simple
-- You need it to scale perfectly
-- You want to animate or interact with it
-- File size matters
+选择 **SVG** 当：
+- 图形相对简单
+- 需要完美缩放
+- 想要动画或交互
+- 文件大小很重要
 
-Choose **PNG** when:
-- The image is a photograph
-- The graphic has complex gradients or effects
-- You need pixel-perfect rendering
-- SVG support is a concern
+选择 **PNG** 当：
+- 图像是照片
+- 图形具有复杂的渐变或效果
+- 需要像素完美的渲染
+- SVG 支持是一个问题
 
-## Hybrid Approach
+## 混合方法
 
-Modern websites often use both:
+现代网站通常两者都使用：
 
-- SVG for UI elements, logos, and icons
-- PNG for photos and complex graphics
-- WebP as a fallback for better compression
+- SVG 用于 UI 元素、徽标和图标
+- PNG 用于照片和复杂图形
+- WebP 作为后备以获得更好的压缩
 
-## Conclusion
+## 结论
 
-Both formats have their place in web development. Understanding their strengths helps you make informed decisions that improve both performance and visual quality.
+这两种格式在 Web 开发中都有各自的位置。了解它们的优势有助于您做出明智的决策，从而改善性能和视觉质量。
 
-Use Tiny SVG to optimize your SVG files and keep your website fast!
+使用 Tiny SVG 优化您的 SVG 文件，保持网站快速运行！
