--- a/apps/web/content/blog/getting-started-with-svg-optimization/zh.mdx
+++ b/apps/web/content/blog/getting-started-with-svg-optimization/zh.mdx
@@ -1,86 +1,86 @@
 ---
-title: Getting Started with SVG Optimization
-desc: Learn how to optimize your SVG files for better performance and smaller file sizes
+title: SVG 优化入门
+desc: 了解如何优化 SVG 文件以获得更好的性能和更小的文件体积
 cover: https://images.unsplash.com/photo-1558403194-611308249627?w=800&h=400&fit=crop
 datetime: 2025-01-15
 ---
 
-# Getting Started with SVG Optimization
+# SVG 优化入门
 
-SVG (Scalable Vector Graphics) files are powerful assets for modern web development, but they often contain unnecessary data that can slow down your website. In this guide, we'll explore how to optimize SVG files effectively.
+SVG（可缩放矢量图形）文件是现代 Web 开发的强大资源，但它们通常包含不必要的数据，可能会拖慢您的网站。在本指南中，我们将探索如何有效地优化 SVG 文件。
 
-## Why Optimize SVG Files?
+## 为什么要优化 SVG 文件？
 
-SVG files exported from design tools like Figma, Sketch, or Adobe Illustrator often contain:
+从 Figma、Sketch 或 Adobe Illustrator 等设计工具导出的 SVG 文件通常包含：
 
-- Hidden metadata and comments
-- Unused definitions and groups
-- Redundant attributes
-- Inefficient path data
-- Default values that can be omitted
+- 隐藏的元数据和注释
+- 未使用的定义和组
+- 冗余属性
+- 低效的路径数据
+- 可以省略的默认值
 
-By optimizing these files, you can:
+通过优化这些文件，您可以：
 
-1. **Reduce file size** by 30-70%
-2. **Improve page load times**
-3. **Enhance rendering performance**
-4. **Make your SVG code more maintainable**
+1. **减少文件体积** 30-70%
+2. **改善页面加载时间**
+3. **增强渲染性能**
+4. **使 SVG 代码更易于维护**
 
-## Basic Optimization Techniques
+## 基本优化技术
 
-### Remove Unnecessary Metadata
+### 删除不必要的元数据
 
-Most design tools add metadata that browsers don't need:
+大多数设计工具会添加浏览器不需要的元数据：
 
 ```xml
-<!-- Before -->
+<!-- 之前 -->
 <svg xmlns:xlink="http://www.w3.org/1999/xlink"
      xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-  <!-- content -->
+  <!-- 内容 -->
 </svg>
 
-<!-- After -->
+<!-- 之后 -->
 <svg>
-  <!-- content -->
+  <!-- 内容 -->
 </svg>
 ```
 
-### Simplify Paths
+### 简化路径
 
-Path data can often be simplified without visual changes:
+路径数据通常可以在不改变视觉效果的情况下进行简化：
 
 ```xml
-<!-- Before -->
+<!-- 之前 -->
 <path d="M10.000,10.000 L20.000,20.000" />
 
-<!-- After -->
+<!-- 之后 -->
 <path d="M10 10L20 20" />
 ```
 
-### Remove Default Values
+### 删除默认值
 
-Many attributes have default values that don't need to be specified:
+许多属性具有不需要指定的默认值：
 
 ```xml
-<!-- Before -->
+<!-- 之前 -->
 <rect fill="black" stroke="none" />
 
-<!-- After -->
+<!-- 之后 -->
 <rect />
 ```
 
-## Using Tiny SVG
+## 使用 Tiny SVG
 
-Our tool makes optimization effortless:
+我们的工具让优化变得轻而易举：
 
-1. **Upload or paste** your SVG file
-2. **Preview** the before and after
-3. **Download** the optimized version
+1. **上传或粘贴** 您的 SVG 文件
+2. **预览** 优化前后的效果
+3. **下载** 优化后的版本
 
-All processing happens in your browser - your files never leave your device!
+所有处理都在您的浏览器中进行 - 您的文件永远不会离开您的设备！
 
-## Conclusion
+## 结论
 
-SVG optimization is an essential step in modern web development. With the right tools, you can significantly reduce file sizes while maintaining perfect visual quality.
+SVG 优化是现代 Web 开发中的关键步骤。使用合适的工具，您可以在保持完美视觉质量的同时显著减少文件体积。
 
-Start optimizing your SVG files today and see the difference!
+今天就开始优化您的 SVG 文件，看看效果如何！
